# TIMEFRAME-

./: .env.example  ARCHITECTURAL_AUDIT.md  ARCHITECTURAL_AUDIT_DRAFT.md  ARCHITECTURE_REVIEW.md  AUDIT.md  App.tsx  PROMPT.md  README.md  check_console.cjs  check_errors.sh  config.ts  constants.ts  fix_timeline_usememo.py  fix_timeline_waveform.py  fix_usememo.py  fix_waveform.py  generate_architecture.py  generate_audit.py  index.css  index.html  index.simple.tsx  index.tsx  metadata.json  package-lock.json  package.json  pnpm-lock.yaml  replace_mousemove.py  replace_timeline_mouse.py  review_changes.sh  test_timeline.patch  test_timeline_opt.patch  test_waveform_opt.patch  test_waveform_opt2.patch  tsconfig.json  types.ts  types.ts.bak  update_bolt.sh  vite.config.ts
.Jules/: palette.md
.jules/: bolt.md  palette.md
components/: AIChat.tsx  AgentHubPanel.tsx  AssetManagerPanel.tsx  AssetUniverse.tsx  AudioFadeControls.tsx  AudioLab.tsx  AudioPanel.tsx  CanvasGizmo.tsx  CollapsibleSidebar.tsx  ColorLab.tsx  ColorPanel.tsx  CommandPalette.tsx  CommandPaletteEnhanced.tsx  ContextMenu.tsx  CreatorHub.tsx  Dashboard.tsx  DraftManager.tsx  DragAndDropZone.tsx  EditorSidebar.tsx  EditorView.tsx  ErrorBoundary.tsx  ExportDialog.tsx  ExportLab.tsx  ExportModal.tsx  ExportOverlay.tsx  GenerativeEngine.tsx  GenerativeLab.tsx  Header.tsx  HistoryPanel.tsx  KeyframeEditor.tsx  LandingPage.tsx  LanguageSelector.tsx  Loader.tsx  OnboardingFlow.tsx  OptimizedAssetGrid.tsx  PerformanceDashboard.tsx  ProjectSetup.tsx  PropertiesPanel.tsx  (+21 more)
src-rust/: Cargo.toml
src-rust/src/: lib.rs
(+150 files in other folders)
